project/logs/20250512_164005.log
Use Adapater:NVIDIA GeForce RTX 4060 Laptop GPU

FeatureLevel　:　12.2

Complete create D3D12Device!!!

Begin CompileShader, path:Object3D.VS.hlsl, profile:vs_6_0

Object3D.VS.hlsl:3:1: error: expected unqualified-id
{
^
Object3D.VS.hlsl:6:16: error: use of undeclared identifier 'TransformationMatrix'
ConstantBuffer<TransformationMatrix> gTransformationMatrix : register(b0);
               ^
Object3D.VS.hlsl:7:8: error: redefinition of 'VertexShaderOutput'
struct VertexShaderOutput
       ^
./Object3d.hlsli:1:8: note: previous definition is here
struct VertexShaderOutput
       ^

